// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots IKContext OverRidingUrlParameter 1`] = `
<div>
  <img
    alt=""
    path="default-image.jpg"
    src="https://ik.imagekit.io/utkace/tr:h-300,w-400/default-image.jpg?ik-sdk-version=react-1.0.4"
  />
</div>
`;

exports[`Storyshots IKContext imageKitContext 1`] = `
<div>
  <img
    alt=""
    path="default-image.jpg"
    src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400/default-image.jpg?ik-sdk-version=react-1.0.4"
  />
</div>
`;

exports[`Storyshots IKContext imagePublicKeyFail 1`] = `
<h1>
  Error: Missing publicKey during initialization
</h1>
`;

exports[`Storyshots IKUpload imageKitUploadwithAllTheProps 1`] = `
<div>
  <input
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`Storyshots IKUpload imageKitUploadwithAuthentication 1`] = `
<div>
  <input
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`Storyshots IKUpload imageKitUploadwithoutAuthentication 1`] = `
<div>
  <input
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`Storyshots Image imageLinkFail 1`] = `
<h1>
  Error: Missing src / path during initialization!
</h1>
`;

exports[`Storyshots Image imagePublicKeyFail 1`] = `
<h1>
  Error: Missing publicKey during initialization
</h1>
`;

exports[`Storyshots Image imageUrlEndpointFail 1`] = `
<h1>
  Error: Missing urlEndpoint during initialization
</h1>
`;

exports[`Storyshots Image imageWithLQIP 1`] = `
<img
  alt=""
  id="lqip"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.4&tr=h-300%2Cw-400&q-20"
/>
`;

exports[`Storyshots Image imageWithPath 1`] = `
<img
  alt=""
  path="default-image.jpg"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.4"
/>
`;

exports[`Storyshots Image imageWithQueryParameters 1`] = `
<img
  alt=""
  path="default-image.jpg"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.4&version=5&name=check"
/>
`;

exports[`Storyshots Image imageWithSrc 1`] = `
<img
  alt="abc"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.4"
/>
`;

exports[`Storyshots Image imageWithSrcQueryParameters 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?foo=bar&ik-sdk-version=react-1.0.4&version=5&name=check"
/>
`;

exports[`Storyshots Image imageWithTransformations 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.4&tr=h-300%2Cw-400"
/>
`;

exports[`Storyshots Image leadingSlashesInPath 1`] = `
<img
  alt=""
  path="////default-image.jpg"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.4"
/>
`;

exports[`Storyshots Image trailingSlashesInUrlEndpoint 1`] = `
<img
  alt=""
  path="default-image.jpg"
  src="https://ik.imagekit.io/mindship/default-image.jpg?ik-sdk-version=react-1.0.4"
/>
`;

exports[`Storyshots Image-Transformation imageWithChainedTransformations 1`] = `
<img
  alt=""
  path="default-image.jpg"
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400:rt-90/default-image.jpg?ik-sdk-version=react-1.0.4"
/>
`;

exports[`Storyshots Image-Transformation imageWithNonExistingTransformation 1`] = `
<img
  alt=""
  path="default-image.jpg"
  src="https://ik.imagekit.io/your_imagekit_id/tr:foo-bar/default-image.jpg?ik-sdk-version=react-1.0.4"
/>
`;

exports[`Storyshots Image-Transformation imageWithNonExistingTransformationWithExistingTransformation 1`] = `
<img
  alt=""
  path="default-image.jpg"
  src="https://ik.imagekit.io/your_imagekit_id/tr:foo-bar,h-300/default-image.jpg?ik-sdk-version=react-1.0.4"
/>
`;

exports[`Storyshots Image-Transformation imageWithSingleTransformations 1`] = `
<img
  alt=""
  path="default-image.jpg"
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400/default-image.jpg?ik-sdk-version=react-1.0.4"
/>
`;

exports[`Storyshots Image-Transformation imageWithTransformationPositionAsPathPassingSrc 1`] = `
<img
  alt=""
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.4&tr=h-300%2Cw-400"
  transformationPosition="path"
/>
`;

exports[`Storyshots Image-Transformation imageWithTransformationPositionAsQuery 1`] = `
<img
  alt=""
  path="default-image.jpg"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=react-1.0.4&tr=h-300%2Cw-400"
  transformationPosition="query"
/>
`;
